--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -6,8 +6,13 @@
 }
 
 .header {
+  background-color: rgb(207, 204, 204);
   display: flex;
   justify-content: space-evenly;
+  position: sticky;
+  top: 0;
+  margin-bottom: 20px;
+  box-shadow: 2px 8px 10px rgb(133, 130, 130);
 }
 
 .header button {
@@ -19,6 +24,7 @@
 
 .container h2 {
   font-weight: 800;
+  color: rgb(77, 76, 76);
 }
 
 img {
@@ -29,14 +35,13 @@ img {
 .lists {
   display: flex;
   justify-content: space-around;
-  width: 700px;
+  width: 800px;
   list-style: none;
   margin: 10px 270px;
   padding: 10px;
   border: 1px solid black;
   color: #fff;
   border-radius: 10px;
-
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.2);
 }
 
