--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -1,24 +1,22 @@
-/* .backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  z-index: 20;
-  background-color: rgba(0, 0, 0, 0.75);
-} */
 .modal {
-  position: absolute;
-  top: 0;
-  left: 0;
+  position: fixed;
+  top: 200px;
   width: 90%;
-  background-color: white;
+  height: 30%;
+  background: url(https://images.unsplash.com/photo-1626427223333-183395267453?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1932&q=80);
   padding: 1rem;
   border-radius: 14px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   z-index: 30;
   animation: slide-down 300ms ease-out forwards;
 }
+
+.modal button {
+  width: 100px;
+  margin: 10px;
+  height: 30px;
+}
+
 @media (min-width: 768px) {
   .modal {
     width: 40rem;
